--- a/melody-grpc-proto/pom.xml
+++ b/melody-grpc-proto/pom.xml
@@ -28,6 +28,10 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-netty</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
