--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <module>melody-grpc-proto</module>
         <module>melody-grpc-dependency</module>
         <module>melody-grpc-server</module>
-        <module>melod-ygrpc-client</module>
+        <module>melody-grpc-client</module>
     </modules>
 
     <dependencyManagement>
